<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="text_id_1" type="id"/>
    <item name="text_id_2" type="id"/>
    <item name="text_id_3" type="id"/>
    <item name="text_id_4" type="id"/>
    <item name="text_id_5" type="id"/>
    <item name="text_id_6" type="id"/>
    <integer-array name="ids">
        <item>@id/text_id_1</item>
        <item>@id/text_id_2</item>
        <item>@id/text_id_3</item>
        <item>@id/text_id_4</item>
        <item>@id/text_id_5</item>
        <item>@id/text_id_6</item>
    </integer-array>
</resources>
