<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:text="8.0"
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="10pt"
        android:gravity="center"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scoreTV"/>

    <TextView
        android:id="@+id/scoreTV"
        android:text="0"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="2"
        android:layout_height="50dp"
        android:textSize="10pt"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sentence"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <View
        android:id="@+id/border_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/play_area_border"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/sentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/play_area_border"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/border_start"
        android:layout_width="@dimen/play_area_border"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/border_top"
        app:layout_constraintBottom_toTopOf="@id/border_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <View
        android:id="@+id/border_end"
        android:layout_width="@dimen/play_area_border"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/border_top"
        app:layout_constraintBottom_toTopOf="@id/border_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"/>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/border_top"
        app:layout_constraintStart_toEndOf="@id/border_start"
        app:layout_constraintEnd_toStartOf="@id/border_end"
        app:layout_constraintBottom_toTopOf="@id/border_bottom"/>

</androidx.constraintlayout.widget.ConstraintLayout>